test/asm/label-before-endc.asm
section "test", rom0
if 1
println "one"
label0: endc
if 2
println "two"
label1: endc
